# tonkatsu-os

./: .env.example  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Makefile  README.md  README_NEW.md  USER_MANUAL.md  data_loader.py  database.py  main.py  ml_models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  spectrum_importer.py  start_dev.sh  test_mvp.py  test_preprocess.py  test_suite.py  trained_ensemble_metrics.json  trained_ensemble_model.pkl  visualization.py
.github/workflows/: ci.yml  release.yml
.github:workflows/: release.yml
data/raw/pharma/: README.md  samples.yaml
data/raw/rruff/: README.md  samples.yaml
data/simulations/: sample_spectrum.csv
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/database/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/: Navigation.tsx  SpectralChart.tsx  SpectrumPreview.tsx
frontend/src/types/: spectrum.ts
frontend/src/utils/: api.ts
rruff_data/: rruff_list.txt
scripts/: analyze_cli.py  db_report.py  fetch_pharma_samples.py  fetch_rruff_samples.py  find_duplicates.py  list_ports.py  list_spectra.py  rebuild_features.py  refresh_dataset.py  setup_dev.py  simulate_acquisition.py  start_backend.py  start_frontend.py  train_ensemble.py
src/tonkatsu_os/: __init__.py
src/tonkatsu_os/api/: __init__.py  main.py  models.py  state.py
src/tonkatsu_os/api/routes/: __init__.py  acquisition.py  analysis.py  database.py  import_data.py  pretrained.py  reference.py  system.py  training.py
src/tonkatsu_os/cli/: __init__.py  main.py
src/tonkatsu_os/core/: __init__.py  data_loader.py  spectrum_importer.py
src/tonkatsu_os/database/: __init__.py  raman_database.py
src/tonkatsu_os/hardware/: __init__.py  spectrometer.py
src/tonkatsu_os/ml/: __init__.py  ensemble_classifier.py  pretrained_models.py  training_pipeline.py
src/tonkatsu_os/preprocessing/: __init__.py  advanced_preprocessor.py
src/tonkatsu_os/utils/: __init__.py
src/tonkatsu_os/visualization/: __init__.py  spectral_visualizer.py
src/tonkatsu_os/web/: __init__.py  app.py
tests/data/: example_spectrum.json
tests/unit/: test_analysis_models.py  test_smoke.py
